@@ -1,3 +1,8 @@
+2006-03-21	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-tree-view.c(exo_tree_view_button_press_event): Do not
+	  mess up with double click events.
+
 2006-03-18	Benedikt Meurer <benny@xfce.org>
 
 	* THANKS: Add translator credits for Andrey Fedoseev
